force-app/main/default/objects/TFR_Part_Effect__c/TFR_Part_Effect__c.object-meta.xml
<CustomObject>
    <label>TFR Causal Part</label>
    <nameField>
        <displayFormat>TFREP-{000000}</displayFormat>
        <label>TFR Part Effect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TFR Causal Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>