force-app/main/default/objects/TFR_Part_Effect__c/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <label>Consequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>