force-app/main/default/objects/TFR_Part_Effect__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>TFR Part Effects</relationshipLabel>
    <relationshipName>TFR_Part_Effects</relationshipName>
    <type>Lookup</type>
</CustomField>