force-app/main/default/objects/TFR_Part_Effect__c/fields/TFR__c.field-meta.xml
<CustomField>
    <fullName>TFR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TFR</label>
    <referenceTo>TFR__c</referenceTo>
    <relationshipLabel>TFR Part Effects</relationshipLabel>
    <relationshipName>TFR_Part_Effects</relationshipName>
    <type>Lookup</type>
</CustomField>