force-app/main/default/objects/TFR_Part_Effect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Consequence__c</columns>
    <columns>Failure_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product__c</columns>
    <columns>TFR__c</columns>
    <columns>Root_Cause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>